fix spacing

--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ body {
 }
 .nav-center {
   display: flex;
+  margin: 0 auto;
+  max-width: 1170px;
 }
 .nav-links {
   height: auto;
